cree el archivo estilo.css y escribi estructura html5

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Hola mundo de git</h1>
+    <ul style="display: flex;">
+        <li>inicio</li>
+        <li>menu</li>
+        <li>putitas</li>
+    </ul>
 </body>
 </html>
